# lab-informatics

./: .env.example  .flake8  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  fix_syntax.py  patch_fetch.py
.github/workflows/: ci.yml
backend/: Dockerfile  main.py  pixi.toml  pyproject.toml  test_data.csv  test_ingestion.txt  uvicorn_log.txt
backend/agents/: scientist_agent.py
backend/api/: auth.py  database.py  postgres.py
backend/api/routes/: agent.py  analytics.py  auth.py  compounds.py  eln.py  experiments.py  ingestion.py  units.py
backend/api/services/: eln_service.py
backend/models/: provenance.py  schemas.py
backend/services/: analytics.py  chemistry.py  provenance.py  unit_harmonization.py
backend/uploads/eln/: ELN_AID_504718_Orexin_Receptor_OX1R.md  ELN_AID_624407_Orexin_Receptor_OX1R.md  ELN_AID_624408_Orexin_Receptor_OX1R.md  ELN_AID_624409_Orexin_Receptor_OX1R.md  ELN_AID_624410_Orexin_Receptor_OX1R.md  ELN_INDEX.md
docs/: getting-started.md
docs/examples/: qsar-tutorial.md
docs/lab-data-simulator-github-files/: README-badges-snippet.md
frontend/: build.css  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
learning/: 05_architecture_services.md  06_rbac_administration.md  README.md
learning/01_sql_and_data/: README.md  concepts.md  (+1 more)
reports/: compound_manifest_20260406_054852.json
scripts/: msr_test.py  orexin_sleep_model.py  project_generator.sh  pubchem_compound_register.py  pubchem_eln_scientist.py  pubchem_importer.py  seed_data.py  setup.sh  setup_chembl.sh
(+22 files in other folders)
