[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "pandas>=3.0.1",
    "pint>=0.25.2",
    "pydantic>=2.0",
    "pymongo>=4.6",
    "python-multipart>=0.0.22",
    "rdkit>=2023.9.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.11",
    "uvicorn>=0.41.0",
    "slowapi>=0.1.9",
]
